[tool.poetry]
name = "at-queue"
version = "0.1.dev14"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
jsonschema = "*"
aio-pika = "*"
python = "^3.10"
at-config = {git = "https://github.com/grigandal625/AT_CONFIG.git", rev = "master"}
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
